--- a/css/src/chimplate-helpers.css
+++ b/css/src/chimplate-helpers.css
@@ -90,13 +90,16 @@
 
 /* Vertical Alignment */
 /* ---------------------------------------------------------------------------------------------- */
-.valign-wrapper{
+.valign-wrapper {
 
 	display: table;
 	vertical-align: middle;
+	height: 100%;
+	width: 100%;
 }
 
-.valign{
+.valign {
 
+	vertical-align: middle;
 	display: table-cell;
 }
